# solrpi

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml  setup_raspberry-zero.sh  solrpi_demo_ascii.py  solrpi_main.py  uninstall.sh
demo/: asciiui.py  invertermock.py
doc/: README.md
service/: solrpi.service
solrpi/: fronius_inverter.py  i_inverter.py  i_uidevice.py  ledmatrix.py  neopixel.py  renderer.py
test/: sample_fronius_1_response.json  sample_fronius_2_response.json  test_solrpi_fronius.py  test_solrpi_ledmatrix.py
